--- a/packages/projecta/package.json
+++ b/packages/projecta/package.json
@@ -3,17 +3,19 @@
   "packageManager": "yarn@4.6.0",
   "type": "module",
   "dependencies": {
-    "@codingame/monaco-vscode-api": "~11.1.2",
-    "@codingame/monaco-vscode-configuration-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-editor-api": "~11.1.2",
-    "@codingame/monaco-vscode-extensions-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-keybindings-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-languages-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-localization-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-log-service-override": "~11.1.2",
-    "@codingame/monaco-vscode-model-service-override": "~11.1.2",
-    "monaco-editor-wrapper": "6.1.1",
-    "monaco-languageclient": "9.1.1",
+    "@codingame/monaco-vscode-api": "13.1.3",
+    "@codingame/monaco-vscode-configuration-service-override": "13.1.3",
+    "@codingame/monaco-vscode-editor-api": "13.1.3",
+    "@codingame/monaco-vscode-editor-service-override": "13.1.3",
+    "@codingame/monaco-vscode-extension-api": "13.1.3",
+    "@codingame/monaco-vscode-extensions-service-override": "13.1.3",
+    "@codingame/monaco-vscode-languages-service-override": "13.1.3",
+    "@codingame/monaco-vscode-localization-service-override": "13.1.3",
+    "@codingame/monaco-vscode-log-service-override": "13.1.3",
+    "@codingame/monaco-vscode-model-service-override": "13.1.3",
+    "monaco-editor-wrapper": "6.2.3",
+    "monaco-languageclient": "9.2.3",
+    "vscode": "npm:@codingame/monaco-vscode-extension-api@13.1.3",
     "vscode-ws-jsonrpc": "3.4.0"
   },
   "devDependencies": {
