--- a/packages/projectb/package.json
+++ b/packages/projectb/package.json
@@ -9,5 +9,8 @@
     "@types/vscode": "^1.85.2",
     "jest": "^29.7.0",
     "typescript": "^5.7.3"
+  },
+  "scripts": {
+    "build": "tsc src/index.ts"
   }
 }
