--- a/packages/projectb/package.json
+++ b/packages/projectb/package.json
@@ -2,13 +2,34 @@
   "name": "projectb",
   "packageManager": "yarn@4.6.0",
   "type": "module",
+  "dependencies": {
+    "commander": "^13.1.0",
+    "elkjs": "0.9.3",
+    "inversify": "6.2.2",
+    "langium": "3.3.1",
+    "langium-sprotty": "3.3.0",
+    "reflect-metadata": "^0.2.2",
+    "sprotty-elk": "1.4.0",
+    "sprotty-protocol": "1.4.0",
+    "sprotty-vscode": "1.0.0",
+    "vscode-languageclient": "^9.0.1",
+    "vscode-languageserver": "^9.0.1"
+  },
   "devDependencies": {
     "@eslint/compat": "^1.2.6",
     "@jest/globals": "^29.7.0",
-    "@types/node": "^22.13.1",
-    "@types/vscode": "^1.85.2",
+    "@types/node": "20",
+    "@vscode/test-electron": "^2.4.1",
+    "@vscode/vsce": "3.2.2",
+    "depcheck": "^1.4.5",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
-    "typescript": "^5.7.3"
+    "shx": "^0.3.4",
+    "typescript": "^5.7.3",
+    "vscode-languageserver-textdocument": "^1.0.12",
+    "vscode-languageserver-types": "3.17.5"
   },
   "scripts": {
     "build": "tsc src/index.ts"
