--- a/package.json
+++ b/package.json
@@ -1,7 +1,49 @@
 {
   "name": "yarn-monaco-lc-problem",
-  "packageManager": "yarn@4.6.0",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-jest": "^28.10.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "gulp": "^5.0.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-docblock": "^29.7.0",
+    "jest-expect-message": "^1.1.3",
+    "jest-runner": "^29.7.0",
+    "jest-runner-groups": "^2.2.0",
+    "lint-staged": "^15.4.3",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
+    "prettier": "^3.4.2",
+    "ts-jest": "29.2.5",
+    "typescript": "^5.7.3"
+  },
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "cross-spawn": "7.0.5",
+    "glob": "11.0.0",
+    "test-exclude": "7.0.1",
+    "vscode-languageclient@npm:~9.0.1": "patch:vscode-languageclient@npm%3A9.0.1#~/.yarn/patches/vscode-languageclient-npm-9.0.1-af7be4c2f9.patch",
+    "vscode-languageclient@npm:^9.0.1": "patch:vscode-languageclient@npm%3A9.0.1#~/.yarn/patches/vscode-languageclient-npm-9.0.1-af7be4c2f9.patch"
+  },
+  "scripts": {
+    "prepare": "husky",
+    "lint": "gulp lint",
+    "build": "gulp build",
+    "build:release": "NODE_ENV=production gulp build",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix",
+    "*.ts": "eslint --fix"
+  }
 }
