--- a/packages/projecta/package.json
+++ b/packages/projecta/package.json
@@ -2,24 +2,30 @@
   "name": "projecta",
   "packageManager": "yarn@4.6.0",
   "type": "module",
+  "scripts": {
+    "build": "tsc --noEmit -p ./tsconfig.json && node build.mjs && cross-env NODE_ENV=production  hugo --config ./hugo.toml -b / -d public --gc --minify    ",
+    "watch": "tsc --noEmit -p ./tsconfig.json && node build.mjs && cross-env NODE_ENV=development hugo server --config ./hugo.toml -D -b http://localhost:1313 -d public --appendPort=false"
+  },
   "dependencies": {
-    "@codingame/monaco-vscode-api": "13.1.3",
-    "@codingame/monaco-vscode-configuration-service-override": "13.1.3",
-    "@codingame/monaco-vscode-editor-api": "13.1.3",
-    "@codingame/monaco-vscode-editor-service-override": "13.1.3",
-    "@codingame/monaco-vscode-extension-api": "13.1.3",
-    "@codingame/monaco-vscode-extensions-service-override": "13.1.3",
-    "@codingame/monaco-vscode-languages-service-override": "13.1.3",
-    "@codingame/monaco-vscode-localization-service-override": "13.1.3",
-    "@codingame/monaco-vscode-log-service-override": "13.1.3",
-    "@codingame/monaco-vscode-model-service-override": "13.1.3",
-    "monaco-editor-wrapper": "6.2.3",
-    "monaco-languageclient": "9.2.3",
-    "vscode": "npm:@codingame/monaco-vscode-extension-api@13.1.3",
+    "@codingame/monaco-vscode-api": "13.1.4",
+    "@codingame/monaco-vscode-configuration-service-override": "13.1.4",
+    "@codingame/monaco-vscode-editor-api": "13.1.4",
+    "@codingame/monaco-vscode-editor-service-override": "13.1.4",
+    "@codingame/monaco-vscode-extension-api": "13.1.4",
+    "@codingame/monaco-vscode-extensions-service-override": "13.1.4",
+    "@codingame/monaco-vscode-languages-service-override": "13.1.4",
+    "@codingame/monaco-vscode-localization-service-override": "13.1.4",
+    "@codingame/monaco-vscode-log-service-override": "13.1.4",
+    "@codingame/monaco-vscode-model-service-override": "13.1.4",
+    "monaco-editor-wrapper": "6.2.4",
+    "monaco-languageclient": "9.2.4",
+    "vscode": "npm:@codingame/monaco-vscode-extension-api@13.1.4",
     "vscode-ws-jsonrpc": "3.4.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.1",
+    "cross-env": "~7.0.3",
+    "esbuild": "^0.24.2",
+    "esbuild-plugin-copy": "^2.1.1",
     "typescript": "^5.7.3"
   }
 }
