--- a/packages/projecta/package.json
+++ b/packages/projecta/package.json
@@ -7,19 +7,17 @@
     "watch": "tsc --noEmit -p ./tsconfig.json && node build.mjs && cross-env NODE_ENV=development hugo server --config ./hugo.toml -D -b http://localhost:1313 -d public --appendPort=false"
   },
   "dependencies": {
-    "@codingame/monaco-vscode-api": "13.1.4",
-    "@codingame/monaco-vscode-configuration-service-override": "13.1.4",
-    "@codingame/monaco-vscode-editor-api": "13.1.4",
-    "@codingame/monaco-vscode-editor-service-override": "13.1.4",
-    "@codingame/monaco-vscode-extension-api": "13.1.4",
-    "@codingame/monaco-vscode-extensions-service-override": "13.1.4",
-    "@codingame/monaco-vscode-languages-service-override": "13.1.4",
-    "@codingame/monaco-vscode-localization-service-override": "13.1.4",
-    "@codingame/monaco-vscode-log-service-override": "13.1.4",
-    "@codingame/monaco-vscode-model-service-override": "13.1.4",
-    "monaco-editor-wrapper": "6.2.4",
-    "monaco-languageclient": "9.2.4",
-    "vscode": "npm:@codingame/monaco-vscode-extension-api@13.1.4",
+    "@codingame/monaco-vscode-api": "~11.1.2",
+    "@codingame/monaco-vscode-configuration-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-editor-api": "~11.1.2",
+    "@codingame/monaco-vscode-extensions-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-keybindings-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-languages-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-localization-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-log-service-override": "~11.1.2",
+    "@codingame/monaco-vscode-model-service-override": "~11.1.2",
+    "monaco-editor-wrapper": "6.1.1",
+    "monaco-languageclient": "9.1.1",
     "vscode-ws-jsonrpc": "3.4.0"
   },
   "devDependencies": {
